[package]
name = "ct-calculator"
version = "0.2.0"
authors = [ "Oliver Corrodi <corrooli@students.zhaw.ch>", "Adrian Hornung <hornuadr@students.zhaw.ch>"]
edition = "2021"
description = "The chaddest, most tanner ARM cortex M0 arithmetic emulator/chad-culator on the interwebz. - © Olichu & Adichu"
repository = "https://github.zhaw.ch/hornuadr/ct-calculator"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
num = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
